# odata-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/instructions/: architecture.instructions.md
.github/prompts/: library.prompt.md  query.prompt.md
TODO/: README.md  annotations-on-expressions.md  filter-function-signatures.md  filter-lambda-any-all.md  service-metadata-endpoint.md  structured-warnings.md  surface-query-parse-errors.md  term-definitions.md  typed-constant-variants.md  utf8-aware-column-counting.md
apps/edm-graph/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/edm-graph/.claude/: launch.json
apps/edm-graph/public/: graph copy.json  graph.json
apps/edm-graph/src/: main.ts  render.ts  types.ts
crates/csdl-edm/: .gitignore  Cargo.toml
crates/csdl-edm/.github/prompts/: consolidate.prompt.md  unify-csdl-model.prompt.md
crates/csdl-edm/TODO/: README.md  csdl-coverage-gaps.md  graph-export-path-attribute-gaps.md  path-attribute-resolution-architecture.md
crates/csdl-edm/data/inputs/: enum_sample.csdl.json  enum_sample.csdl.xml  example89.csdl.json  example89.csdl.xml  extras_sample.csdl.json  extras_sample.csdl.xml  fields_sample.csdl.json  fields_sample.csdl.xml  import_sample.csdl.json  import_sample.csdl.xml  record_sample.csdl.json  record_sample.csdl.xml  reporting_line.csdl.json  reporting_line.csdl.xml  types_sample.csdl.json  types_sample.csdl.xml
crates/csdl-edm/docs/: CSDL-4.01-MetaModel.md  OData-4.01-MetaModel.md  Semantic Validation Checklist.md
crates/csdl-edm/examples/: cross_format_equivalence.rs  csdl_roundtrip.rs  edm_graph_demo.rs  parse_resolve_validate.rs  url_expansion.rs
crates/csdl-edm/src/: csdl.rs  csdl_json_reader.rs  csdl_xml_reader.rs  edm.rs  expr.rs  graph.rs  lib.rs  main.rs  parser.rs  path_expansion.rs  resolver.rs  serialization.rs  validator.rs
crates/csdl-edm/tests/: entity_set_path_resolution.rs  format_equivalence_fixtures.rs  import_target_resolution.rs  key_path_resolution.rs  nav_binding_resolution.rs  partner_resolution.rs  pipeline_fixtures.rs  roundtrip_fixtures.rs
crates/edm/: Cargo.toml
crates/edm/TODO/: actions-and-functions.md  edmx-support.md  element-metadata.md  semantic-graph.md  zero-copy-token-strings.md
crates/edm/examples/: csdl_to_model.rs  example90-schema.csdl.xml  example90.csdl.xml  sample.csdl.xml
crates/edm/src/: builder.rs  error.rs  expr.rs  lib.rs  service_schema.rs
crates/edm/src/builder/: meta.rs
crates/edm/src/model/: builtins.rs  mod.rs  names.rs  path.rs  resolver.rs
crates/edm/src/reader/: mod.rs
crates/edm/src/syntactic/: mod.rs
crates/edm/tests/: builder.rs  model.rs  reader.rs
crates/routing/: Cargo.toml
crates/routing/src/: lib.rs
crates/service/: Cargo.toml  demo.http
crates/service/examples/: rooms.rs
crates/service/examples/rooms/: demo.http  main.rs  rooms.csdl.xml
crates/service/src/: builder.rs  config.rs  context.rs  lib.rs  oquery.rs  router.rs  scaffold.rs  schema_view.rs
crates/service/tests/: router.rs
crates/url/: ABNF-ANALYSIS.md  Cargo.toml
crates/url/docs/: abnf-coverage.md  spec.md
crates/url/examples/: parse_urls.rs
crates/url/src/: display.rs  lib.rs  tests.rs
crates/url/tests/: query.rs
docs/: an-odata-library-in-rust.md  complete-path-attributes.md  csdl-attribute-catalog.toml  edm-semantic-graph.md  odata-in-rust-key-challenges.md  paper.md
examples/rooms/: demo.http  demo.hurl  main.rs  rooms.csdl.xml
scripts/: sync_attribute_catalog.py  test-rooms-hurl.ps1  test-rooms-hurl.sh
src/: lib.rs
