[package]
name = "csdl-edm"
version.workspace = true
edition = "2024"

[lib]
name = "csdl_edm"

[dependencies]
quick-xml = "0.40.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.24"
similar = "2"
