[package]
name = "odata-rs-service"
version.workspace = true
edition = "2024"

[lib]
name = "odata_service"

[dependencies]
axum = "0.8.9"
odata_edm = { package = "odata-rs-edm", path = "../edm" }
odata_url = { package = "odata-rs-url", path = "../url" }
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
