[package]
name = "odata-rs-service"
version.workspace = true
edition = "2024"

[lib]
name = "odata_service"

[features]
# Enables `odata_service::oquery` — a fluent query builder over `sqlx`
# targeting SQLite. Opt-in so the bare service crate stays store-agnostic.
sqlx-sqlite = ["dep:sqlx"]

[dependencies]
axum = "0.8.9"
csdl_edm = { package = "csdl-edm", path = "../csdl-edm" }
odata_url = { package = "odata-rs-url", path = "../url" }
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"], optional = true }
tracing = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = { version = "0.5", features = ["util"] }
